libs/updraft_nmea/src/snapshots/updraft_nmea__framing__tests__cambridge_logger_data_maps_not_logged_and_invalid_numeric_fields.snap
---
source: libs/updraft_nmea/src/framing.rs
expression: parse_one(s)
---
Frame(
    Pcaid(
        Pcaid {
            last_point_logged: Some(
                false,
            ),
            pressure_altitude: None,
            engine_noise_level: None,
            log_flags: None,
        },
    ),
)
