libs/updraft_nmea/src/snapshots/updraft_nmea__framing__tests__cambridge_logger_data_rejects_unknown_status_and_invalid_fields.snap
---
source: libs/updraft_nmea/src/framing.rs
expression: parse_one(s)
---
Frame(
    Pcaid(
        Pcaid {
            last_point_logged: None,
            pressure_altitude: None,
            engine_noise_level: None,
            log_flags: None,
        },
    ),
)
