libs/updraft_nmea/src/snapshots/updraft_nmea__framing__tests__decodes_a_sentence_with_a_non_utf8_field.snap
---
source: libs/updraft_nmea/src/framing.rs
expression: parse_one(s)
---
Frame(
    Gga(
        Gga {
            talker: Gps,
            utc_time: Some(
                Time(13:47:49.600),
            ),
            position: Some(
                LatLon {
                    latitude: 48.964695°,
                    longitude: 7.0973215000000005°,
                },
            ),
            fix_quality: Dgps,
            satellites_used: Some(
                25,
            ),
            hdop: Some(
                1.0,
            ),
            altitude: Some(
                1452 m,
            ),
            geoid_separation: Some(
                47.2 m,
            ),
            dgps_age: None,
            dgps_station: None,
        },
    ),
)
