libs/updraft_nmea/src/snapshots/updraft_nmea__framing__tests__decodes_a_void_rmc.snap
---
source: libs/updraft_nmea/src/framing.rs
expression: parse_one(s)
---
Frame(
    Rmc(
        Rmc {
            talker: Gps,
            utc_time: None,
            status: Void,
            position: None,
            speed_over_ground: None,
            course_over_ground: None,
            date: None,
            magnetic_variation: None,
            mode: Some(
                NotValid,
            ),
        },
    ),
)
