libs/updraft_nmea/src/snapshots/updraft_nmea__framing__tests__keeps_unrecognised_sentence_as_unknown.snap
---
source: libs/updraft_nmea/src/framing.rs
expression: parse_one(s)
---
Frame(
    Unknown(
        Unknown {
            sentence: "$PXABC,11,1,2,1,0,,0,,,",
        },
    ),
)
